force-app/main/default/objects/Quote__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who approved this quote, or system if auto-approved.</description>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes_Approved</relationshipName>
    <type>Lookup</type>
</CustomField>