force-app/main/default/objects/Quote__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <description>When the quote was approved.</description>
    <label>Approved Date</label>
    <type>DateTime</type>
</CustomField>