force-app/main/default/objects/Quote__c/fields/Auto_Approved__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the quote was auto-approved because margin met or exceeded the threshold.</description>
    <label>Auto Approved</label>
    <type>Checkbox</type>
</CustomField>