force-app/main/default/objects/Quote__c/fields/Calculated_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Calculated_End_Date__c</fullName>
    <description>Auto-calculated end date: set to the latest line item end date when items are added/modified. This is the actual writable end date used for quotes.</description>
    <label>Calculated End Date</label>
    <type>Date</type>
</CustomField>