force-app/main/default/objects/Quote__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>AI-generated summary of the quote purpose and scope.</description>
    <label>Quote Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>