force-app/main/default/objects/Quote__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Automatically calculated end date based on start date, metric and count.</description>
    <formula>CASE(Time_Period_Metric__c,
  "Days", Start_Date__c + Time_Period_Count__c,
  "Weeks", Start_Date__c + (7 * Time_Period_Count__c),
  "Months", ADDMONTHS(Start_Date__c, Time_Period_Count__c),
  "Quarters", ADDMONTHS(Start_Date__c, 3 * Time_Period_Count__c),
  ADDMONTHS(Start_Date__c, Time_Period_Count__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>