force-app/main/default/objects/Quote__c/fields/Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Margin_Percent__c</fullName>
    <description>The margin percentage for the entire quote.</description>
    <formula>IF(Total_Amount__c &gt; 0, (Total_Amount__c - Total_Cost__c) / Total_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>