force-app/main/default/objects/Quote__c/fields/Phase_List__c.field-meta.xml
<CustomField>
    <fullName>Phase_List__c</fullName>
    <description>Stores a comma-separated list of phase names created by the user, preserving empty phases.</description>
    <label>Phase List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>