force-app/main/default/objects/Quote__c/fields/Rejected_By__c.field-meta.xml
<CustomField>
    <fullName>Rejected_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who rejected this quote.</description>
    <label>Rejected By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes_Rejected</relationshipName>
    <type>Lookup</type>
</CustomField>