force-app/main/default/objects/Quote__c/fields/Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Date__c</fullName>
    <description>When the quote was rejected.</description>
    <label>Rejected Date</label>
    <type>DateTime</type>
</CustomField>