force-app/main/default/objects/Quote__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date of the engagement.</description>
    <label>Start Date</label>
    <type>Date</type>
    <defaultValue>Today()</defaultValue>
</CustomField>