force-app/main/default/objects/Quote__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who submitted this quote for approval.</description>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes_Submitted</relationshipName>
    <type>Lookup</type>
</CustomField>