force-app/main/default/objects/Quote__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <description>When the quote was submitted for approval.</description>
    <label>Submitted Date</label>
    <type>DateTime</type>
</CustomField>