force-app/main/default/objects/Quote__c/fields/Time_Period_Count__c.field-meta.xml
<CustomField>
    <fullName>Time_Period_Count__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The number of time periods (Days, Weeks, Months, or Quarters) for the quote duration.</description>
    <label>Time Period Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>