force-app/main/default/objects/Quote__c/fields/Time_Period_Metric__c.field-meta.xml
<CustomField>
    <fullName>Time_Period_Metric__c</fullName>
    <description>The duration metric for the quote (Days, Weeks, Months, or Quarters).</description>
    <label>Time Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
                <default>true</default>
                <label>Months</label>
            </value>
            <value>
                <fullName>Quarters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>