force-app/main/default/objects/Quote__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <description>Total cost of all line items in the quote.</description>
    <label>Total Cost</label>
    <summarizedField>Quote_Line_Item__c.Total_Line_Cost__c</summarizedField>
    <summaryForeignKey>Quote_Line_Item__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>