force-app/main/default/objects/Quote__c/recordTypes/Sales_Manager.recordType-meta.xml
<RecordType>
    <fullName>Sales_Manager</fullName>
    <active>true</active>
    <label>Sales Manager</label>
</RecordType>