force-app/main/default/objects/Quote__c/validationRules/Lock_Non_Draft_Quotes.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Non_Draft_Quotes</fullName>
    <active>true</active>
    <description>Prevents users from editing fields on the Quote if it is not in Draft status, unless they are approving or rejecting it.</description>
    <errorConditionFormula>AND(
  NOT(ISPICKVAL(PRIORVALUE(Status__c), &quot;Draft&quot;)),
  NOT(ISCHANGED(Status__c)),
  NOT(ISCHANGED(Margin_Amount__c)),
  NOT(ISCHANGED(Total_Amount__c)),
  NOT(ISCHANGED(Total_Cost__c)),
  NOT(ISCHANGED(Phase_List__c)),
  NOT(ISCHANGED(CurrencyIsoCode))
)</errorConditionFormula>
    <errorMessage>Quotes can only be edited when they are in Draft status.</errorMessage>
</ValidationRule>