force-app/main/default/objects/Quote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>Valid_Until__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>